<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/WelcomeString"
        android:layout_weight="1"
        android:textSize="20sp"
        android:textAlignment="center"
        android:layout_marginTop="100dp"
        android:gravity="center_horizontal" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:gravity="center"
        >
        <Button
            android:id="@+id/IngredientButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_ingredient"
            android:padding="20dp"/>
        <Button
            android:id="@+id/RecipeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_recipe"
            android:padding="20dp"/>
    </LinearLayout>

</LinearLayout>