<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddRecipeActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recipe_name"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_margin="5dp"
        android:layout_alignParentTop="true"
        android:id="@+id/recipeNameText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_margin="5dp"
        android:layout_alignBottom="@id/recipeNameText"
        android:layout_toEndOf="@id/recipeNameText"
        android:layout_toRightOf="@id/recipeNameText"
        android:id="@+id/recipeNameEditText"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recipe_instructions"
        android:id="@+id/recipeInstructionText"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:layout_margin="5dp"
        android:layout_alignParentStart="true"
        android:layout_below="@id/recipeNameText"
        android:layout_alignParentLeft="true" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignBottom="@id/recipeInstructionText"
        android:layout_margin="5dp"
        android:layout_toEndOf="@id/recipeInstructionText"
        android:layout_toRightOf="@id/recipeInstructionText"
        android:layout_below="@id/recipeNameText"
        android:id="@+id/recipeInstructionEditText"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recipe_url"
        android:id="@+id/recipeURLText"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_margin="5dp"
        android:layout_alignParentStart="true"
        android:layout_below="@id/recipeInstructionText"
        android:layout_alignParentLeft="true" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignBottom="@id/recipeURLText"
        android:layout_margin="5dp"
        android:layout_toEndOf="@id/recipeURLText"
        android:layout_toRightOf="@id/recipeURLText"
        android:layout_below="@id/recipeInstructionText"
        android:id="@+id/recipeURLEditText"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recipe_meal_type"
        android:id="@+id/recipeMealTypeText"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_margin="5dp"
        android:layout_alignParentStart="true"
        android:layout_below="@id/recipeURLText"
        android:layout_alignParentLeft="true" />
    <Spinner
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:layout_toEndOf="@id/recipeMealTypeText"
        android:layout_below="@id/recipeURLText"
        android:layout_toRightOf="@id/recipeMealTypeText"
        android:layout_alignBottom="@id/recipeMealTypeText"
        android:id="@+id/recipeMealTypeSpinner"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_new_ingredient"
        android:id="@+id/recipeIngredientText"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_margin="5dp"
        android:layout_alignParentStart="true"
        android:layout_below="@id/recipeMealTypeText"
        android:layout_alignParentLeft="true" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignBottom="@id/recipeIngredientText"
        android:layout_margin="5dp"
        android:layout_toEndOf="@id/recipeIngredientText"
        android:layout_toRightOf="@id/recipeIngredientText"
        android:layout_below="@id/recipeMealTypeText"
        android:id="@+id/recipeIngredientEditText"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/addIngredientButton"
        android:text="@string/add_ingredient"
        android:layout_below="@id/recipeIngredientEditText"
        android:layout_margin="10dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_ingredients_in_list"
        android:id="@+id/PreListText"
        android:layout_margin="5dp"
        android:layout_below="@id/recipeIngredientText"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/recipeNoteText"
        android:text="@string/recipe_note"
        android:textSize="12sp"
        android:layout_alignParentStart="true"
        android:layout_margin="5dp"
        android:layout_below="@id/addIngredientButton"
        android:layout_alignParentLeft="true" />
    <ListView
        android:id="@+id/list_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:layout_below="@id/recipeNoteText"
        android:layout_above="@id/recipeBackButton"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:id="@+id/recipeBackButton"
        android:text="@string/go_back"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:id="@+id/recipeSubmitButton"
        android:text="@string/submit_to_database"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@id/recipeBackButton"
        android:layout_toRightOf="@id/recipeBackButton" />
</RelativeLayout>